--- a/src/main/resources/templates/empleados.html
+++ b/src/main/resources/templates/empleados.html
@@ -13,10 +13,9 @@
 
 		<br>
 		<h4 class="card-title">
-			<a th:href="@{/form}" class="btn btn-primary">Agregar empleado</a>
+			<a th:href="@{/form}" class="btn btn-primary">Agregar</a>
 			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarPDF}" class="btn btn-secondary">PDF</a>
-			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarExcel}" class="btn btn-success">Excel</a>
-			
+			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarExcel}" class="btn btn-success">Excel</a>			
 		</h4>
 
 		<table class="table table-striped table-bordered">
@@ -48,7 +47,7 @@
 					<td> <!-- sec:authorize="hasRole('ADMIN')" -->
 						<a class="btn btn-info btn-sm" th:href="@{/ver/} + ${empleado.id}">Detalles</a>
 						<a sec:authorize="hasRole('ADMIN')"  class="btn btn-warning btn-sm" th:href="@{/form/} + ${empleado.id}">Editar</a>
-						<a sec:authorize="hasRole('ADMIN')"  class="btn btn-danger btn-sm" th:href="@{/eliminar/} + ${empleado.id}" onclick="return confirm('¿Estás seguro de eliminar al empleado?');">Eliminar</a>
+						<a sec:authorize="hasRole('ADMIN')"  class="btn btn-danger btn-sm" th:href="@{/eliminar/} + ${empleado.id}" onclick=" confirm('¿Estás seguro de eliminar al empleado?');">Eliminar</a>
 					</td>
 
 				</tr>
