--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head th:replace="layout/layout :: head"></head> 
 <body>
 	
-	<section class="vh-100" style="background-color: #508bfc;">
+	<section class="vh-100" style="background-color: #ECF0F1;">
 		<div class="container py-5 h-100">
 			<div
 				class="row d-flex justify-content-center align-items-center h-100">
