--- a/src/main/resources/templates/empleados.html
+++ b/src/main/resources/templates/empleados.html
@@ -15,7 +15,7 @@
 		<h4 class="card-title">
 			<a th:href="@{/form}" class="btn btn-primary">Agregar</a>
 			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarPDF}" class="btn btn-secondary">PDF</a>
-			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarExcel}" class="btn btn-success">Excel</a>			
+			<a sec:authorize="hasRole('ADMIN')" th:href="@{/exportarExcel}" class="btn btn-success">Hoja de Calculo</a>			
 		</h4>
 
 		<table class="table table-striped table-bordered">
