The layouts have been modified

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -77,7 +77,7 @@
 				Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a>.
 		</p>
 		<p>
-			Proyecto desarrollado en Spring Tools Suite 4 , M.I. Adan Chavez Olivera.<br /> &copy; achavez 2022,
+			Proyecto desarrollado en Spring Tools Suite 4 , Adan Chavez Olivera.<br /> &copy; achavez 2022,
 			Inc. Todos los derechos reservados. <br />
 		</p>
 		<!-- Optional JavaScript -->
