--- a/src/main/resources/templates/form_empleado.html
+++ b/src/main/resources/templates/form_empleado.html
@@ -30,7 +30,7 @@
 	                 </div>
 	                 
 	                  <div class="form-group">
-	                    <label>Apellido : </label>
+	                    <label>Apellido materno: </label>
 	                    <input type="text" th:field="*{segundoApellido}" class="form-control" th:errorclass="'form-control alert-danger'"/>
 	                    <small class="form-text text-danger" th:if="${#fields.hasErrors('segundoApellido')}" th:errors="*{segundoApellido}"></small> 
 	                 </div>
